force-app/main/default/objects/QC_Wastage__c/fields/Responsible_Party__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Party__c</fullName>
    <label>Responsible Party</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DTF Machine</fullName>
            </value>
            <value>
                <fullName>Heat Press (DTF)</fullName>
            </value>
            <value>
                <fullName>Ink</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Pre-Press</fullName>
            </value>
            <value>
                <fullName>Press</fullName>
            </value>
            <value>
                <fullName>Screens</fullName>
            </value>
            <value>
                <fullName>Staging</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>Tagging</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>