force-app/main/default/objects/QC_Wastage__c/fields/Sales_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order Line</label>
    <referenceTo>AcctSeedERP__Sales_Order_Line__c</referenceTo>
    <relationshipLabel>QC Wastage</relationshipLabel>
    <relationshipName>QC_Wastage</relationshipName>
    <type>Lookup</type>
</CustomField>