force-app/main/default/objects/QC_Wastage__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <label>Solution</label>
    <type>TextArea</type>
</CustomField>