force-app/main/default/objects/QC_Wastage__c/fields/Solution_Complete__c.field-meta.xml
<CustomField>
    <fullName>Solution_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solution Complete</label>
    <type>Checkbox</type>
</CustomField>