force-app/main/default/objects/QC_Wastage__c/fields/Specify__c.field-meta.xml
<CustomField>
    <fullName>Specify__c</fullName>
    <label>Specify</label>
    <type>TextArea</type>
</CustomField>