force-app/main/default/objects/QC_Wastage__c/fields/Unloader__c.field-meta.xml
<CustomField>
    <fullName>Unloader__c</fullName>
    <label>Unloader</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ashden</fullName>
            </value>
            <value>
                <fullName>Ashley</fullName>
            </value>
            <value>
                <fullName>Dom</fullName>
            </value>
            <value>
                <fullName>Drake</fullName>
            </value>
            <value>
                <fullName>Eric</fullName>
            </value>
            <value>
                <fullName>Isaiah</fullName>
            </value>
            <value>
                <fullName>Jade</fullName>
            </value>
            <value>
                <fullName>Jairo</fullName>
            </value>
            <value>
                <fullName>Jantzen</fullName>
            </value>
            <value>
                <fullName>Jeannette</fullName>
            </value>
            <value>
                <fullName>Kenny</fullName>
            </value>
            <value>
                <fullName>Matthew</fullName>
            </value>
            <value>
                <fullName>Miguel</fullName>
            </value>
            <value>
                <fullName>Nik</fullName>
            </value>
            <value>
                <fullName>Randy</fullName>
            </value>
            <value>
                <fullName>Raymond</fullName>
            </value>
            <value>
                <fullName>Zach</fullName>
            </value>
            <value>
                <fullName>Zavier</fullName>
            </value>
            <value>
                <fullName>Guest</fullName>
            </value>
            <value>
                <fullName>Alan</fullName>
                <isActive>false</isActive>
                <label>Alan</label>
            </value>
            <value>
                <fullName>Alexis</fullName>
                <isActive>false</isActive>
                <label>Alexis</label>
            </value>
            <value>
                <fullName>Angel</fullName>
                <isActive>false</isActive>
                <label>Angel</label>
            </value>
            <value>
                <fullName>Ashley P.</fullName>
                <isActive>false</isActive>
                <label>Ashley P.</label>
            </value>
            <value>
                <fullName>Blake</fullName>
                <isActive>false</isActive>
                <label>Blake</label>
            </value>
            <value>
                <fullName>Carl</fullName>
                <isActive>false</isActive>
                <label>Carl</label>
            </value>
            <value>
                <fullName>Cory</fullName>
                <isActive>false</isActive>
                <label>Cory</label>
            </value>
            <value>
                <fullName>Dre</fullName>
                <isActive>false</isActive>
                <label>Dre</label>
            </value>
            <value>
                <fullName>Jermaine</fullName>
                <isActive>false</isActive>
                <label>Jermaine</label>
            </value>
            <value>
                <fullName>Jess</fullName>
                <isActive>false</isActive>
                <label>Jess</label>
            </value>
            <value>
                <fullName>Jessie</fullName>
                <isActive>false</isActive>
                <label>Jessie</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>