force-app/main/default/objects/QC_Wastage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Job__c</columns>
    <columns>Inventory_SKU__c</columns>
    <columns>Inventory_colors__c</columns>
    <columns>Inventory_adult_sizes__c</columns>
    <columns>Inventory_youth_sizes__c</columns>
    <columns>of_shirts__c</columns>
    <columns>of_non_shirt_items__c</columns>
    <columns>Avoidable__c</columns>
    <columns>Pulled_from_Inventory__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Est_Wastage_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>