force-app/main/default/objects/QC_Wastage__c/listViews/Copy_of_Wastage_Entry.listView-meta.xml
<ListView>
    <fullName>Copy_of_Wastage_Entry</fullName>
    <columns>Purchase_Order__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Front_door_color__c</columns>
    <columns>of_shirts__c</columns>
    <columns>Specify__c</columns>
    <columns>New_Product_ETA__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Solution_Complete__c</columns>
    <columns>Solution__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Purchase_Order_Line_Look_Up__c</field>
        <operation>notContain</operation>
        <value>54903</value>
    </filters>
    <filters>
        <field>Product_Name__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>PO QC Ticket - FD</label>
</ListView>