force-app/main/default/objects/QC_Wastage__c/listViews/Julie_Search.listView-meta.xml
<ListView>
    <fullName>Julie_Search</fullName>
    <columns>NAME</columns>
    <columns>Pulled_from_Inventory__c</columns>
    <columns>Job__c</columns>
    <columns>Inventory_SKU__c</columns>
    <columns>Inventory_colors__c</columns>
    <columns>Inventory_adult_sizes__c</columns>
    <columns>Inventory_youth_sizes__c</columns>
    <columns>of_shirts__c</columns>
    <columns>of_non_shirt_items__c</columns>
    <columns>Avoidable__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UPDATEDBY_USER</field>
        <operation>contains</operation>
        <value>julie</value>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Julie - Search</label>
</ListView>