force-app/main/default/objects/QC_Wastage__c/listViews/Julie_Wastage_ENTRY_FOR_CYCLE_COUNT.listView-meta.xml
<ListView>
    <fullName>Julie_Wastage_ENTRY_FOR_CYCLE_COUNT</fullName>
    <columns>NAME</columns>
    <columns>Pulled_from_Inventory__c</columns>
    <columns>Job__c</columns>
    <columns>Inventory_SKU__c</columns>
    <columns>Inventory_colors__c</columns>
    <columns>Inventory_adult_sizes__c</columns>
    <columns>Inventory_youth_sizes__c</columns>
    <columns>of_shirts__c</columns>
    <columns>of_non_shirt_items__c</columns>
    <columns>Avoidable__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Issue_Group__c</field>
        <operation>notEqual</operation>
        <value>Understaged</value>
    </filters>
    <filters>
        <field>Pulled_from_Inventory__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Do_Not_Pull_From_Inventory__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Good_Type__c</field>
        <operation>equals</operation>
        <value>Inventory</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2024 12:00 AM</value>
    </filters>
    <filters>
        <field>Inventory_SKU__c</field>
        <operation>equals</operation>
        <value>5001,9001</value>
    </filters>
    <label>Julie-Wastage ENTRY FOR CYCLE COUNT</label>
</ListView>