force-app/main/default/objects/QC_Wastage__c/listViews/Liam_View.listView-meta.xml
<ListView>
    <fullName>Liam_View</fullName>
    <columns>Inventory_SKU__c</columns>
    <columns>Inventory_colors__c</columns>
    <columns>Inventory_adult_sizes__c</columns>
    <columns>Inventory_youth_sizes__c</columns>
    <columns>of_shirts__c</columns>
    <columns>of_non_shirt_items__c</columns>
    <columns>Press_Number__c</columns>
    <columns>Physically_Pulled__c</columns>
    <columns>Issue_Group__c</columns>
    <columns>Job__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Do_Not_Pull_From_Inventory__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>11/3/2024 12:00 AM</value>
    </filters>
    <filters>
        <field>Location__c</field>
        <operation>equals</operation>
        <value>Staging</value>
    </filters>
    <filters>
        <field>Physically_Pulled__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Staging View - THIS ONE</label>
</ListView>