force-app/main/default/objects/QC_Wastage__c/listViews/QC_TICKET_TO_BE_HANDLED_for_Purchasing.listView-meta.xml
<ListView>
    <fullName>QC_TICKET_TO_BE_HANDLED_for_Purchasing</fullName>
    <columns>NAME</columns>
    <columns>Responsible_Party__c</columns>
    <columns>Issue_Group__c</columns>
    <columns>Issue_Description__c</columns>
    <columns>Avoidable__c</columns>
    <columns>Job__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QC_Ticket__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Solution_Complete__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>QC TICKET TO BE HANDLED (for Purchasing)</label>
</ListView>