force-app/main/default/objects/QC_Wastage__c/listViews/Sarahs_View.listView-meta.xml
<ListView>
    <fullName>Sarahs_View</fullName>
    <columns>Good_Type__c</columns>
    <columns>of_shirts__c</columns>
    <columns>Inventory_colors__c</columns>
    <columns>Inventory_SKU__c</columns>
    <columns>Inventory_youth_sizes__c</columns>
    <columns>Inventory_adult_sizes__c</columns>
    <columns>Job__c</columns>
    <columns>Issue_Group__c</columns>
    <columns>Issue_Description__c</columns>
    <columns>Responsible_Party__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Responsible_Party__c</field>
        <operation>equals</operation>
        <value>Marketing</value>
    </filters>
    <filters>
        <field>Issue_Group__c</field>
        <operation>equals</operation>
        <value>Sample</value>
    </filters>
    <filters>
        <field>Pulled_from_Inventory__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Sarahs View</label>
</ListView>