force-app/main/default/objects/QC_Wastage__c/listViews/Staging_View.listView-meta.xml
<ListView>
    <fullName>Staging_View</fullName>
    <columns>NAME</columns>
    <columns>Job__c</columns>
    <columns>Issue_Group__c</columns>
    <columns>Inventory_SKU__c</columns>
    <columns>Inventory_colors__c</columns>
    <columns>Inventory_adult_sizes__c</columns>
    <columns>Inventory_youth_sizes__c</columns>
    <columns>of_shirts__c</columns>
    <columns>Physically_Pulled__c</columns>
    <columns>Coolyz_Colors__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>2/25/2025 12:00 AM</value>
    </filters>
    <label>Staging View</label>
</ListView>