force-app/main/default/objects/QC_Wastage__c/listViews/Wastage_for_export.listView-meta.xml
<ListView>
    <fullName>Wastage_for_export</fullName>
    <columns>NAME</columns>
    <columns>Pulled_from_Inventory__c</columns>
    <columns>Job__c</columns>
    <columns>Inventory_SKU__c</columns>
    <columns>Inventory_colors__c</columns>
    <columns>Inventory_adult_sizes__c</columns>
    <columns>Inventory_youth_sizes__c</columns>
    <columns>of_shirts__c</columns>
    <columns>of_non_shirt_items__c</columns>
    <columns>Avoidable__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Outbound_Inventory_Movement__c</columns>
    <columns>Inbound_Inventory_Movement__c</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Issue_Group__c</field>
        <operation>notEqual</operation>
        <value>Understaged</value>
    </filters>
    <filters>
        <field>Pulled_from_Inventory__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Do_Not_Pull_From_Inventory__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Good_Type__c</field>
        <operation>equals</operation>
        <value>Inventory</value>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Wastage for export</label>
</ListView>